@@ -1,3 +1,7 @@
+2009-01-31  higepon  <higepon@users.sourceforge.jp>
+
+        * RecordProcedures.cpp (scheme::makeRecordTypeDescriptorEx): Fixed the sealed bug. Thanks to leque(Issue 44).
+
 2009-01-30  higepon  <higepon@users.sourceforge.jp>
 
         * tools/psyntax-r6rs/rev10_to_10/psyntax/main.ss : Fixed the bug of (raise 1). Thanks to leque(Issue 42).
